[workspace]
members = [
    "cybermd-core",
    "cybermd-parser",
    "cybermd-ast",
    "cybermd-highlighter",
    "cybermd-renderer",
    "cybermd-ffi",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CyberMD Team"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Tree-sitter for code parsing
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-bash = "0.20"

# For FFI
libc = "0.2"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
